--- a/mario.html
+++ b/mario.html
@@ -9,10 +9,22 @@
     </style>
 </head>
 <body>
-    <h1>Mario 2</h1>
+    <h1>Pyramid Slide</h1>
+<!--
     <h3>
         Behold this wonderful pyramid:
     </h3>
+-->
+
+    <form>
+        <select>
+            <option value="#">#</option>
+            <option value="@">@</option>
+            <option value="X">X</option>
+            <option value="$">$</option>
+</select>
+        <input type="range" name="pyramidHeight" min="0" max="20">
+    </form>
 
     <div id="pyramid">
         <!-- Our pyramid will go inside here -->
